Fix overflow in Chrome

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@ p, h1, h2, h3 {
   font-family: "Nexa Bold", sans-serif;
 }
 
+html,
+body {
+  width: 100vw;
+}
+
 .center {
   position: absolute;
   width: 100%;
@@ -35,7 +40,7 @@ p, h1, h2, h3 {
 
 section {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   background-size: cover;
 }
 
